# rm-appload

./: .gitignore  AppLibrary.h  AppLoad.cpp  AppLoad.h  AppLoadCoordinator.cpp  AppLoadCoordinator.h  README.MD  _start.qml  appload.pro  appload.qml  config.h  library.cpp  library.h  main.cpp  management.cpp  management.h
.github/workflows/: build-release.yml
backend-clients/rust-backend/: Cargo.toml
backend-clients/rust-backend/src/: lib.rs
backends/qtfb-clients/cpp/: common.h  qtfb-client.cpp  qtfb-client.h
examples/appload/frontend-only/: build.sh
examples/appload/full/: build-rmpp.sh  build.sh
examples/frontend-only/ui/: example.qml
examples/full/: application.qrc  manifest.json
examples/full/backend/: Cargo.toml
examples/qtfb/cpp/: make-toy-aarch.sh  make-toy.sh  toyclient.cpp
examples/qtfb/rust/: Cargo.toml
examples/qtfb/rust/src/: main.rs
icon/: appload  icon.cpp  icon.qrc
resources/: resources.qrc
resources/qml/: appload.qml  window.qml
shim/: CMakeLists.txt  README.MD
shim/src/: connection.cpp  connection.h  fb-shim.cpp  fb-shim.h  fileident.cpp  fileident.h  input-shim.cpp  input-shim.h  qtfb-client  shim.cpp  shim.h  worldvars.cpp  worldvars.h
src/: AppLibrary.h  AppLoadCoordinator.cpp  AppLoadCoordinator.h  library.cpp  library.h  libraryexternals.cpp  log.h  main.cpp  protocol.h
src/qtfb/: FBController.cpp  FBController.h  common.h  fbmanagement.cpp  fbmanagement.h
xovi/: appload.pro  appload.qmd  appload.xovi  icon.cpp  icon.h  main.cpp  make.sh
xovi/template/: appload.pro  appload.qmd  appload.xovi  config.h  main.cpp
(+8 files in other folders)
